Fixed the select a role bar to not be off centered to the left. The drop down is now below the email field.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,14 +54,19 @@ opacity: 0.5;
 
 /*use this to style create role dropdown on admin new login page*/
 select#role.form-select{
-    width: 800px;
+    width: 55%;
     height: 40px;
+    display: flex;
+    justify-content: center;
     border-radius: 5px;
     border-color: black;
     background-color: #f6f6f6;
     color: black;
 }
-
+div.form-select-container {
+    display: flex;
+    justify-content: center;
+}
 td.wrap{
     inline-size: 150px;
     overflow-wrap: break-word;
